# ua-nemo

./: .gitignore  pyproject.toml  requirements.txt  todos.txt
objects/: objects.csv
references/: references.csv
schemas/: Opc.Ua.NodeIds.Services.permissions.csv  Opc.Ua.NodeSet2.Services.documentation.csv  opc.ua.jsonschema.json  opc.ua.jsonschema.verbose.json  opc.ua.openapi.allservices.json  opc.ua.openapi.sessionless.json  opc.ua.services.jsonschema.json  opc.ua.services.jsonschema.verbose.json
src/ua_nemo/: engine.py  node_definitions.py  node_model.py  protocols.py  type_instantiator.py  utils.py  xml_builder.py  xml_loader.py
tests/: test_engine.py  test_hierarchy.py  test_minimal_example.py  test_namespace.py  test_node_id.py  test_node_model.py  test_type_instantiator.py  utils.py
tests/files/objects/: objects.csv
tests/files/references/: references.csv
tests/files/test-typelibs/: test-types.xml
